--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,16 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 22.1.0
     hooks:
       - id: black
         args:
           - --safe
           - --quiet
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.8
+    rev: 3.8.3
     hooks:
       - id: flake8
+        exclude: ^examples/
         additional_dependencies:
           - flake8-docstrings==1.3.1
           - pydocstyle==4.0.0
@@ -17,3 +18,10 @@ repos:
     rev: v4.3.21
     hooks:
       - id: isort
+        exclude: ^examples/
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.942
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-all]
+        exclude: ^examples/
