--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,20 @@
 [tox]
-envlist = py37, py38, lint, mypy
+envlist = py39, py310, lint, mypy
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
-  3.7: py37, lint, mypy
-  3.8: py38
+  3.9: py39, lint, mypy
+  3.10: py310
 
 [testenv:lint]
 basepython = python3
 ignore_errors = True
 commands =
   black --check ./
-  flake8 hass_client
-  pylint hass_client
-  pydocstyle hass_client
+  flake8 custom_components/music_assistant
+  pylint custom_components/music_assistant
+  pydocstyle custom_components/music_assistant
 deps =
   -rrequirements_lint.txt
   -rrequirements_test.txt
