--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -2,8 +2,8 @@
   "domain": "mass",
   "name": "Music Assistant Media library manager",
   "version": "1.0.0",
-  "config_flow": true,
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
+  "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
     "music-assistant==1.0.11"
   ],
@@ -12,5 +12,7 @@
   ],
   "after_dependencies": [
     "media_source", "media_player", "group"
-  ]
+  ],
+  "config_flow": true,
+  "iot_class": "local_push"
 }
