--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -10,6 +10,10 @@
   "codeowners": [
     "@marcelveldt"
   ],
+  "dependencies": [
+    "http",
+    "panel_custom"
+  ],
   "after_dependencies": [
     "media_source", "media_player", "group"
   ],
