--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,7 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
+  - package-ecosystem: "npm"
+    directory: "/custom_components/mass/frontend/"
+    schedule:
+      interval: daily
