--- a/.github/workflows/lint_frontend.yml
+++ b/.github/workflows/lint_frontend.yml
@@ -1,11 +1,11 @@
 name: Lint Vue frontend
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
       - 'custom_components/mass/frontend'
   pull_request:
-    branches: [master]
+    branches: [main]
     paths:
       - 'custom_components/mass/frontend'
   workflow_dispatch:
