--- a/.github/workflows/lint_frontend.yml
+++ b/.github/workflows/lint_frontend.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches: [main]
     paths:
-      - 'custom_components/mass/frontend'
+      - 'custom_components/mass/frontend/*'
   pull_request:
     branches: [main]
     paths:
-      - 'custom_components/mass/frontend'
+      - 'custom_components/mass/frontend/*'
   workflow_dispatch:
 
 
