--- a/.github/workflows/lint_frontend.yml
+++ b/.github/workflows/lint_frontend.yml
@@ -19,8 +19,7 @@ env:
   NODE_VERSION: "17.x" # set this to the node version to use
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy
+  lint_vue:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -28,7 +27,7 @@ jobs:
         uses: actions/setup-node@v2.5.1
         with:
           node-version: ${{ env.NODE_VERSION }}
-      - name: npm install, build, and test
+      - name: npm install and lint
         run: |
           npm install
           npm run lint
