--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,12 @@ on:
     branches: [main]
     paths:
       - '**.py'
+      - 'requirements_dev.txt'
   pull_request:
     branches: [main]
     paths:
       - '**.py'
+      - 'requirements_dev.txt'
   workflow_dispatch:
 
 jobs:
