--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,7 +2,13 @@ name: HACS Validate
 
 on:
   push:
+    paths:
+      - '**.py'
+      - 'requirements_dev.txt'
   pull_request:
+    paths:
+      - '**.py'
+      - 'requirements_dev.txt'
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
