--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,4 +22,6 @@ jobs:
         uses: "hacs/action@main"
         with:
           category: "integration"
+          # brands is disabled awaiting the PR with icon to be merged
+          # requirements is disabled because custom-wheels-builder repo is postponed
           ignore: brands requirements
