--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [marcelveldt]
-custom: [https://www.buymeacoffee.com/marcelveldt]
+github: marcelveldt
+custom: https://www.buymeacoffee.com/marcelveldt
