--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "mass",
-  "name": "Music Assistant Media library manager",
+  "name": "Music Assistant",
   "version": "1.0.2",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
