--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,5 +7,5 @@ pytest==7.1.2
 pytest-cov==3.0.0
 pytest-timeout==2.1.0
 pre-commit==2.18.1
-homeassistant==2022.4.7
-music-assistant==1.0.21
+homeassistant==2022.5.3
+music-assistant
