--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -18,5 +18,6 @@
     "media_source", "media_player", "group"
   ],
   "config_flow": true,
-  "iot_class": "local_push"
+  "iot_class": "local_push",
+  "loggers": ["music_assistant"]
 }
