--- a/custom_components/mass/frontend/package.json
+++ b/custom_components/mass/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "6.6.96",
     "home-assistant-js-websocket": "^7.0.3",
+    "v3-infinite-loading": "^1.0.6",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15",
