--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "mass",
   "name": "Music Assistant",
-  "version": "1.1.19",
+  "version": "1.1.20",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.1.19"
+    "music-assistant==1.1.20",
+    "greenlet==1.1.2"
   ],
   "codeowners": [
     "@marcelveldt"
