--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "mass",
   "name": "Music Assistant",
-  "version": "1.1.22",
+  "version": "2022.6.0b0",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.1.22"
+    "music-assistant==1.1.23"
   ],
   "codeowners": [
     "@marcelveldt"
