--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,10 @@
 blank_issues_enabled: false
+  - name: Music Assistant FAQ section.
+    url: https://github.com/music-assistant/hass-music-assistant/discussions/categories/q-a-faq
+    about: Please ask and answer questions here.
+  - name: Music Assistant community on Discord.
+    url: https://discord.com/channels/753947050995089438/753947050995089442
+    about: For questions and sharing with other users.
+  - name: Music Assistant new features.
+    url: https://github.com/music-assistant/hass-music-assistant/discussions/categories/feature-requests-and-ideas
+    about: If you have a feature or enhancement request.
