--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,5 @@
 blank_issues_enabled: false
+contact_links:
   - name: Music Assistant FAQ section.
     url: https://github.com/music-assistant/hass-music-assistant/discussions/categories/q-a-faq
     about: Please ask and answer questions here.
