--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "mass",
   "name": "Music Assistant",
-  "version": "2022.7.2",
+  "version": "2022.8.0b0",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
