--- a/custom_components/mass/services.yaml
+++ b/custom_components/mass/services.yaml
@@ -2,7 +2,7 @@
 
 queue_command:
   name: Queue command
-  description: Send a command directly to a Music Assistant player(queue). You may provide the origin media_player as well as the (optional) media_player entity created by MA itself.
+  description: "Send a command directly to a Music Assistant player(queue), bypassing the need for a Music Assistant generated player. You may provide the origin media_player as well as the (optional) media_player entity created by MA itself. Note: Only use this special service for advanced purposes. Usually you can just the builtin HA services."
   target:
     entity:
       domain: media_player
@@ -17,18 +17,18 @@ queue_command:
       selector:
         select:
           options:
-            - "play"
-            - "pause"
-            - "next"
-            - "previous"
-            - "stop"
-            - "clear"
-            - "play_media"
-            - "shuffle"
-            - "repeat"
+            - play
+            - pause
+            - next
+            - previous
+            - stop
+            - clear
+            - play_media
+            - shuffle
+            - repeat
             - snapshot_create
             - snapshot_restore
-            - play_alert
+            - play_announcement
 
     uri:
       name: Media item to play
@@ -52,7 +52,8 @@ queue_command:
             - "repeat_mode_off"
             - "shuffle_mode_on"
             - "shuffle_mode_off"
-            - "play_media_play_now"
-            - "play_media_play_next"
-            - "play_media_play_add"
-            - "play_media_play_replace"
+            - "play_media_now"
+            - "play_media_next"
+            - "play_media_add"
+            - "play_media_replace"
+            - "play_media_radio"
