--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -15,7 +15,7 @@
     "panel_custom"
   ],
   "after_dependencies": [
-    "media_source", "media_player", "cast"
+    "media_source", "media_player", "cast", "group"
   ],
   "config_flow": true,
   "iot_class": "local_push",
