--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "mass",
   "name": "Music Assistant",
-  "version": "2022.8.0b2",
+  "version": "2022.8.0",
+  "ha_version": "2022.8.0",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.8.2"
+    "music-assistant==1.8.3"
   ],
   "codeowners": [
     "@marcelveldt"
