--- a/custom_components/mass/frontend/package.json
+++ b/custom_components/mass/frontend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "serve": "vite preview",
     "build": "vite build && npm run build:finish",
     "build:finish": "replace-in-file '/src/main.ts' 'mass.iife.js' 'dist/index.html'",
     "https-preview": "serve dist",
     "test:unit": "vitest --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint:fix": "eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --fix .",
     "dev": "vite",
-    "preview": "vite preview --port 5050",
+    "preview": "vite build && vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
@@ -17,39 +18,41 @@
     "home-assistant-js-websocket": "^7.1.0",
     "v3-infinite-loading": "^1.2.1",
     "vue": "^3.2.37",
-    "vue-i18n": "^9.2.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
     "vue-virtual-scroller": "^2.0.0-alpha.1",
     "vuetify": "^3.0.0-beta.6",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@mdi/js": "^7.0.96",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.7.5",
-    "@types/webfontloader": "^1.0.0",
-    "@vitejs/plugin-vue": "^2.3.4",
+    "@types/node": "^18.7.8",
+    "@types/webfontloader": "^1.6.34",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
     "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-vue": "^9.3.0",
     "https-localhost": "^4.7.1",
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "replace-in-file": "^6.3.5",
-    "sass": "^1.54.4",
+    "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "typescript": "~4.7.4",
-    "vite": "^2.9.15",
+    "vite": "^3.0.9",
     "vite-plugin-pwa": "^0.12.3",
-    "vitest": "^0.22.0",
-    "vue-cli-plugin-vuetify": "~2.5.1",
+    "vite-plugin-vuetify": "^1.0.0-alpha.14",
+    "vitest": "^0.22.1",
+    "vue-cli-plugin-vuetify": "~2.5.4",
     "vue-tsc": "^0.40.1",
-    "vuetify-loader": "^2.0.0-alpha.0"
-  }
+    "webpack-plugin-vuetify": "^2.0.0-alpha.12"
+  },
+  "description": "The Music Assistant frontend/panel is developed in Vue, development instructions below.",
+  "main": "vue.config.js"
 }
