--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -5,7 +5,8 @@
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.8.7"
+    "music-assistant==1.8.7",
+    "music-assistant-frontend==20220908.1"
   ],
   "codeowners": [
     "@marcelveldt"
