--- a/.github/ISSUE_TEMPLATE/translations.yml
+++ b/.github/ISSUE_TEMPLATE/translations.yml
@@ -1,6 +1,6 @@
 name: Translation Request Music Assistant
 description: Contribute to Music Assistant with a translation.
-labels: ["triage", "translation"]
+labels: ["triage, translation"]
 body:
   - type: markdown
     attributes:
