--- a/.github/ISSUE_TEMPLATE/translations.yml
+++ b/.github/ISSUE_TEMPLATE/translations.yml
@@ -1,5 +1,5 @@
-name: Translation Request Music Assistant
-description: Contribute to Music Assistant with a translation.
+name: "Translation Request Music Assistant."
+description: "Contribute to Music Assistant with a translation."
 labels: ["triage, translation"]
 body:
   - type: markdown
