--- a/.github/ISSUE_TEMPLATE/translation_contribute.yml
+++ b/.github/ISSUE_TEMPLATE/translation_contribute.yml
@@ -1,5 +1,5 @@
 name: "Translation Request Music Assistant."
-about: "Contribute to Music Assistant with a translation."
+description: "Contribute to Music Assistant with a translation."
 labels: ["translation"]
 body:
   - type: markdown
