Music Assistant 2.0 - MA integration (#1266)
integration mvp

--- a/setup.cfg
+++ b/setup.cfg
@@ -106,3 +106,10 @@ ignored-classes=_CountingAttr
 
 [pylint.format]
 expected-line-ending-format=LF
+
+[pylint.'MESSAGES CONTROL']
+max-line-length = 120
+disable = "R0902,"
+
+[codespell]
+ignore-words-list = hass,childs
