--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,24 +1,20 @@
 {
   "domain": "mass",
-  "name": "Music Assistant",
-  "version": "2022.12.0",
+  "name": "Music Assistant (BETA)",
+  "version": "2023.6.0b0",
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "requirements": [
-    "music-assistant==1.8.8",
-    "music-assistant-frontend==20220908.1"
+    "music-assistant==2.0.0b31"
   ],
   "codeowners": [
-    "@marcelveldt"
-  ],
-  "dependencies": [
-    "http",
-    "panel_custom"
+    "@music-assistant"
   ],
   "after_dependencies": [
-    "media_source", "media_player", "cast", "group"
+    "media_source", "media_player"
   ],
   "config_flow": true,
   "iot_class": "local_push",
-  "loggers": ["music_assistant"]
+  "loggers": ["music_assistant"],
+  "zeroconf": ["_mass._tcp.local."]
 }
