--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,20 +1,14 @@
 {
   "domain": "mass",
   "name": "Music Assistant (BETA)",
-  "version": "2023.6.0b0",
-  "documentation": "https://github.com/music-assistant/hass-music-assistant",
-  "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
-  "requirements": [
-    "music-assistant==2.0.0b31"
-  ],
-  "codeowners": [
-    "@music-assistant"
-  ],
-  "after_dependencies": [
-    "media_source", "media_player"
-  ],
+  "after_dependencies": ["media_source", "media_player"],
+  "codeowners": ["@music-assistant"],
   "config_flow": true,
+  "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "iot_class": "local_push",
+  "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "loggers": ["music_assistant"],
-  "zeroconf": ["_mass._tcp.local."]
+  "requirements": ["music-assistant==2.0.0b46"],
+  "zeroconf": ["_mass._tcp.local."],
+  "version": "0.0.0"
 }
