--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -9,6 +9,6 @@
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
   "loggers": ["music_assistant"],
   "requirements": ["music-assistant==2.0.0b59"],
-  "zeroconf": ["_mass._tcp.local."],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "zeroconf": ["_mass._tcp.local."]
 }
