Add Stream title to attributes for radio streams (#1729)

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,6 @@
 mypy==1.7.1
 pylint==3.0.3
 pre-commit==3.6.0
-homeassistant==2023.11.3
-music-assistant==2.0.0b78
+homeassistant==2023.12.4
+music-assistant==2.0.0b79
+async_timeout==4.0.2
