--- a/custom_sentences/en/play_media_on_media_player.yaml
+++ b/custom_sentences/en/play_media_on_media_player.yaml
@@ -3,15 +3,13 @@ intents:
   MassPlayMediaOnMediaPlayer:
     data:
       - sentences:
-          - "(play|listen to) {query} <in> (<name>|[<player_devices> <in>] <area> [<in> <player_devices>])"
-          - "<in> (<name>|[<player_devices> <in>] <area> [<in> <player_devices>]) (play|listen to) {query}"
+          - "((play|listen to) {query};(<on> <name>|<local_in> <area>|<on> [the ]{area} <player_devices>|<on> [the ]<player_devices> <local_in> <area>))"
         expansion_rules:
-          player_devices: "([the] speaker[s]|[the] [media] player[s])"
-      - sentences:
-          - "(play|listen to) {query}"
+          player_devices: "(speaker|[media] player)"
+          "on": "(on|using)"
+          local_in: "(in|on)"
         requires_context:
-          area:
-            slot: true
+          domain: "media_player"
 lists:
   query:
     wildcard: true
