--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "[python]": {
           "editor.formatOnSave": true,
           "editor.codeActionsOnSave": {
-              "source.fixAll": true,
-              "source.organizeImports": true
-          }
+            "source.fixAll": "explicit",
+            "source.organizeImports": "explicit"
+        }
       },
       "python.formatting.provider": "black",
   }
