--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,9 @@
 mypy==1.8.0
 pylint==3.0.3
 pre-commit==3.6.0
-homeassistant==2023.12.4
+homeassistant==2023.12.3
 music-assistant==2.0.0b80
 async_timeout==4.0.3
+pytest==7.4.3
+pytest-asyncio==0.21.0
+pytest-homeassistant-custom-component == 0.13.85
