--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,6 +1,8 @@
 mypy==1.8.0
 pylint==3.0.3
 pre-commit==3.6.0
-homeassistant==2024.1.0
+homeassistant==2023.12.3
 music-assistant==2.0.0b80
 async_timeout==4.0.3
+pytest-homeassistant-custom-component==0.13.85
+pytest==7.4.3
