--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ test = [
   "codespell==2.2.6",
   "mypy==1.8.0",
   "ruff==0.1.11",
-  "pre-commit==3.6.0"
+  "pre-commit==3.6.0",
+  "pytest==7.4.3",
+  "pytest-homeassistant-custom-component==0.13.85"
 ]
 
 [tool.black]
