--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Lint with pre-commit
         run: pre-commit run --all-files
       - name: Test with pytest
-        run: pytest tests
+        run: python -m pytest tests/
