--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_test.txt
+          pip install -r requirements_dev.txt
           pre-commit install-hooks
       - name: Lint with pre-commit
         run: pre-commit run --all-files
       - name: Test with pytest
-        run: python -m pytest tests/
+        run: |
+          pip install -r requirements_test.txt
+          pytest
