--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -4,3 +4,4 @@ pre-commit==3.6.0
 music-assistant==2.0.0b81
 async_timeout==4.0.3
 pytest-homeassistant-custom-component==0.13.88
+zeroconf==0.128.0
