Improve config None handling for edge case, add test (#1807)

--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -3,5 +3,6 @@ pylint==3.0.3
 pre-commit==3.6.0
 music-assistant==2.0.0b83
 async_timeout==4.0.3
-pytest-homeassistant-custom-component==0.13.88
-zeroconf==0.128.0
+pytest-homeassistant-custom-component==0.13.91
+voluptuous==0.13.1
+zeroconf==0.131.0
