--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-  "async_timeout==4.0.3",
-  "homeassistant>=2024.1.2",
-  "music-assistant==2.0.0b93",
+  "async_timeout~=4.0.3",
+  "homeassistant~=2024.1.2",
+  "music-assistant~=2.0.0b93",
 ]
 description = "Music Assistant (BETA) Home Assistant Integration"
 license = {text = "Apache-2.0"}
