Sdd zeroconf dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ test = [
   "safety==3.0.1",
   "tomli==2.0.1",
   "pytest-homeassistant-custom-component==0.13.88",
+  "zeroconf"
 ]
 
 [tool.codespell]
