--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ version = "0.0.0"
 
 [project.optional-dependencies]
 test = [
+  "aiofiles",
   "codespell==2.2.6",
   "mypy==1.8.0",
   "pre-commit==3.6.1",
