--- a/custom_components/mass/manifest.json
+++ b/custom_components/mass/manifest.json
@@ -1,14 +1,25 @@
 {
   "domain": "mass",
   "name": "Music Assistant (BETA)",
-  "after_dependencies": ["media_source", "media_player"],
-  "codeowners": ["@music-assistant"],
+  "after_dependencies": [
+    "media_source",
+    "media_player"
+  ],
+  "codeowners": [
+    "@music-assistant"
+  ],
   "config_flow": true,
   "documentation": "https://github.com/music-assistant/hass-music-assistant",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/music-assistant/hass-music-assistant/issues",
-  "loggers": ["music_assistant"],
-  "requirements": ["music-assistant==2.0.0b83"],
+  "loggers": [
+    "music_assistant"
+  ],
+  "requirements": [
+    "music-assistant==2.0.0b109"
+  ],
   "version": "0.0.0",
-  "zeroconf": ["_mass._tcp.local."]
+  "zeroconf": [
+    "_mass._tcp.local."
+  ]
 }
