--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ classifiers = [
 dependencies = [
   "async_timeout~=4.0.3",
   "homeassistant~=2024.3.1",
-  "music-assistant~=2.0.0b93",
+  "music-assistant~=2.0.0b112",
 ]
 description = "Music Assistant (BETA) Home Assistant Integration"
 license = {text = "Apache-2.0"}
@@ -31,7 +31,7 @@ test = [
   "safety==3.0.1",
   "tomli==2.0.1",
   "pytest-homeassistant-custom-component==0.13.108",
-  "zeroconf"
+  "zeroconf",
 ]
 
 [tool.codespell]
