--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,20 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Module",
+      "name": "Home Assistant --skip-pip",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "homeassistant",
+      "justMyCode": false,
+      "args": [
+        "-c",
+        "~/.homeassistant",
+        "--skip-pip-packages",
+        "music-assistant"
+      ]
+    },
+    {
+      "name": "Home Assistant",
       "type": "debugpy",
       "request": "launch",
       "module": "homeassistant",
